--- a/src/style/fundamental/page.scss
+++ b/src/style/fundamental/page.scss
@@ -3,6 +3,6 @@
     color: $font_color;
     background: $background_main;
 
-    font: 14px / 2.14 Spartan, sans-serif;
+    font: 14px / 2.14 Oswald, sans-serif;
   }
 }
