--- a/src/view/component/font.njk
+++ b/src/view/component/font.njk
@@ -1,3 +1,4 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;600;700;800&family=Raleway:wght@700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter&family=Montserrat:wght@800&family=Oswald:wght@600&family=Rubik:wght@400;500&display=swap"
+      rel="stylesheet">
