--- a/src/view/component/hero/hero.njk
+++ b/src/view/component/hero/hero.njk
@@ -3,5 +3,16 @@
         <img src="/img/regular/hero/hero_girl.png"
              alt="hero"
              class="hero__img img">
+        <img src="/img/regular/logo/logo.svg" alt="logo" class="img hero__logo">
+        <div class="hero__present">
+            <div class="hero__present-main">
+                20 <span class="deco__attention">free spins</span>
+            </div>
+            <div class="hero__present-sub">on Elvis Frong in Vegas</div>
+            <div class="hero__present-secondary">bonus code: ELVIS20</div>
+            <div class="hero__button button button_view_primary button_size_xl">
+                <div class="button__text">GET BONUS</div>
+            </div>
+        </div>
     </div>
 </header>
