--- a/src/style/custom/hero.scss
+++ b/src/style/custom/hero.scss
@@ -12,7 +12,79 @@
   &__img {
     position: absolute;
     bottom: 0;
+    left: 100px;
 
-    max-height: 600px;
+    max-height: 900px;
+  }
+
+  &__logo {
+    position: absolute;
+    top: 50px;
+    left: 50%;
+
+    transform: translateX(-50%);
+  }
+
+  &__present {
+    position: absolute;
+    z-index: 2;
+    top: 50%;
+    right: 100px;
+
+    // max-width: 800px;
+    display: inline-block;
+
+    transform: translateY(-50%);
+    text-align: center;
+    text-transform: uppercase;
+
+    color: $color_light;
+
+    font-weight: 600;
+
+    &::before {
+      position: absolute;
+
+      // z-index: 1;
+      left: 50%;
+
+      width: 100%;
+      height: 100%;
+
+      content: '';
+      transform: translateX(-50%);
+
+      border-radius: 30%;
+
+      background-color: $color_active;
+      filter: blur(110px);
+    }
+  }
+
+  &__present-main {
+    position: relative;
+
+    // z-index: 1;
+
+    font-size: 100px;
+    line-height: 140px;
+  }
+
+  &__present-sub {
+    position: relative;
+
+    margin-bottom: 40px;
+
+    font-size: 80px;
+    line-height: 100px;
+  }
+
+  &__present-secondary {
+    position: relative;
+
+    margin-bottom: 40px;
+
+    font-size: 64px;
+    line-height: 90px;
   }
 }
