--- a/src/style/fundamental/layout.scss
+++ b/src/style/fundamental/layout.scss
@@ -19,6 +19,7 @@
     width: 100vw;
     max-width: 100%;
     height: 100vh;
-    min-height: 600px;
+    min-height: 900px;
+    max-height: 1250px;
   }
 }
