--- a/src/style/preset/preset.scss
+++ b/src/style/preset/preset.scss
@@ -1,17 +1,19 @@
 /* COLORS */
+
 /* Main color */
 $color_light: #fff;
 $color_dark: #000;
 $color_passive: #ccc;
-$color_active: yellow;
-$color_attention: red;
+$color_active: #b81e71;
+$color_attention: #fbb72f;
 $color_success: green;
 
-/* TIME*/
+/* TIME */
 
 $th: 0.25s;
 
 /* Settings */
+
 /* Main */
 $background_main: $color_light;
 $font_color: $color_dark;
