--- a/src/style/base/deco.scss
+++ b/src/style/base/deco.scss
@@ -1,8 +1,11 @@
 .deco {
   &__hero {
-    background-image: url('/img/regular/hero/hero_bg.png');
+    background-color: $color_active;
     background-repeat: no-repeat;
     background-size: cover;
+    @include bp480-block {
+      background-image: url('/img/regular/hero/hero_bg.png');
+    }
   }
 
   &__shadow {
@@ -14,7 +17,7 @@
       bottom: 0;
 
       width: 100%;
-      height: 250px;
+      height: 100px;
 
       content: '';
 
@@ -23,6 +26,9 @@
         transparent 0%,
         rgb(0 0 0 / 100%) 100%
       );
+      @include bp768-block {
+        height: 250px;
+      }
     }
   }
 
