--- a/src/style/fundamental/layout.scss
+++ b/src/style/fundamental/layout.scss
@@ -19,7 +19,10 @@
     width: 100vw;
     max-width: 100%;
     height: 100vh;
-    min-height: 900px;
-    max-height: 1250px;
+
+    @include bp1440-block {
+      min-height: 900px;
+      max-height: 1250px;
+    }
   }
 }
