--- a/src/style/preset/preset.scss
+++ b/src/style/preset/preset.scss
@@ -2,7 +2,7 @@
 
 /* Main color */
 $color_light: #fff;
-$color_dark: #000;
+$color_dark: #0d0827;
 $color_passive: #ccc;
 $color_active: #b81e71;
 $color_attention: #fbb72f;
@@ -15,5 +15,5 @@ $th: 0.25s;
 /* Settings */
 
 /* Main */
-$background_main: $color_light;
+$background_main: $color_dark;
 $font_color: $color_dark;
