--- a/src/view/section/benefit-section.njk
+++ b/src/view/section/benefit-section.njk
@@ -1,4 +1,4 @@
 {% extends "layout/layout-section-base.njk" %}
 {% block section %}
-    {% include "blocks/menu/menu-clear.njk" %}
+    {% include "component/benefit/benefit.njk" %}
 {% endblock section %}
