--- a/src/style/preset/preset.scss
+++ b/src/style/preset/preset.scss
@@ -2,8 +2,10 @@
 
 /* Main color */
 $color_light: #fff;
+$color_passive: #33364a;
 $color_dark: #0d0827;
-$color_passive: #ccc;
+$color_dark_light: #261e50;
+$color_dark_alph: rgb(22 23 41 / 2%);
 $color_active: #b81e71;
 $color_attention: #fbb72f;
 $color_success: green;
