--- a/src/view/page/index.njk
+++ b/src/view/page/index.njk
@@ -9,7 +9,7 @@
     } %}
     {% include "section/hero-section.njk" %}
     <!-- Hero seciton END -->
-    <!-- Hero seciton -->
+    <!-- Benefit seciton -->
     {% set inject = {
     wrapper: 'wrap',
     sectionInner: '',
@@ -17,5 +17,30 @@
     sectionContainer: 'standart'
     } %}
     {% include "section/benefit-section.njk" %}
-    <!-- Hero seciton END -->
+    <!-- Benefit seciton END -->
+    <!-- Paysys seciton -->
+    {% set inject = {
+    wrapper: 'wrap',
+    sectionInner: '',
+    sectionClass: '',
+    sectionContainer: 'standart'
+    } %}
+    {% include "section/paysys-section.njk" %}
+    <!-- Paysys seciton END -->
+    <!-- Footer seciton -->
+    {% set inject = {
+    wrapper: 'wrap',
+    sectionInner: '',
+    sectionClass: '',
+    sectionContainer: 'standart'
+    } %}
+    {% include "section/footer-section.njk" %}
+    <!-- Footer seciton END -->
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 {% endblock main %}
