--- a/src/view/component/footer/footer.njk
+++ b/src/view/component/footer/footer.njk
@@ -1,13 +1,12 @@
-<footer class="footer page__footer">
-    <div class="footer__inner layout__wrap">
+<footer class="footer">
+    <div class="footer__inner">
+        <div class="footer__imgbox">
+            <img src="/img/regular/logo/logo_footer.png"
+                 alt="logo"
+                 class="img footer__img">
+        </div>
         <div class="footer__text">
-            Copyright © 2021 is owned and operated by N1 Interactive Ltd, a company
-            incorporated under the laws of Malta with registration number and
-            registered address at 206, Wisely House, Old Bakery Street, Valletta
-            VLT1451, Malta. is licensed and regulated by the Malta Gaming Authority
-            under the licences: MGA/B2C/394/2017 (issued on 01/08/2018). Gambling can
-            be addictive. Play responsibly. Wildfortune casino accepts players only
-            over 18 years of age.
+            Copyright © 2021 bohocasino.com is owned and operated by Hollycorn N.V., a company registered and established under the laws of Curaçao, with registration number 144359 and registered address at Heelsumstraat 51 E-Commerce Park, Curaçao, and its wholly-owned subsidiary, Libergos Limited, registered in Cyprus with registration number ΗΕ 371971 and registered address Boumpoulinas, 1-3, BOUBOULINA BUILDING, Flat/Office 42, 1060, Nicosia, Cyprus. Hollycorn N.V. is licensed and regulated by Antillephone N.V. (license no. 8048/JAZ2019-015).
         </div>
     </div>
 </footer>
